@startuml

title __ADAPTER's Class Diagram__\n

  package com.voicenotes {
    package com.voicenotes.view.library {
      package com.voicenotes.view.library.adapter {
        class CustomAdapter {
            {static} - inflater : LayoutInflater
            ~ contexto : Context
            - checkCount : Integer
            ~ audioChecked : List<Boolean>
            ~ checksVisibles : boolean
            - checkedItemWhileLongClick : int
            + changeChechBoxesVisibility()
            + CustomAdapter()
            + getCount()
            + getItem()
            + getItemId()
            - parseToDuracion()
            - parseToFecha()
            + getView()
            + getTextFromPath()
        }
      }
    }
  }
  

  package com.voicenotes {
    package com.voicenotes.view.library {
      package com.voicenotes.view.library.adapter {
        class CustomAdapterElement {
            - name : String
            - checked : Boolean
            - date : Date
            - duration : Date
            + getDate()
            + setDate()
            + getDuration()
            + setDuration()
            + CustomAdapterElement()
            + getName()
            + getChecked()
            + setChecked()
            + toString()
        }
      }
    }
  }
  

  CustomAdapter -up-|> BaseAdapter
  CustomAdapter o-- BibliotecaActivity : bib


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
